[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-scale-node-embeddings"
version = "0.1"
description = "The multi-scale-node-embeddings package contains a set of methods to build the multi-scale model (MSM) from the full adjacency matrix, leading to node embeddings, or with partial information, leading to density-corrected and degree-corrected MSM."
license = {text = "GNU General Public License v3"}
authors = [
  { name = "Riccardo Milocco", email = "riccardo.milocco@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.22",
  "numba>=0.56",
  "matplotlib>=3.10",
  "scipy",
  "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true  # If you plan to include things like LICENSE, README, etc.

[tool.setuptools.packages.find]
where = ["src"]